--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     deobfCompile "mezz.jei:jei_1.12.2:4.8.5.144"
     deobfCompile "mcp.mobius.waila:Hwyla:${hwyla_version}"
     deobfCompile "codersafterdark.reskillable:Reskillable:1.12.2-1.4.0-SNAPSHOT.53"
+    deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-${crafttweaker_version}"
+    deobfCompile "CraftTweaker2:CraftTweaker2-API:1.12-${crafttweaker_version}"
+    deobfCompile "CraftTweaker2:ZenScript:1.12-${crafttweaker_version}"
 }
 
 processResources {
